[package]
name = "drone_gcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.10.1" # Ensure to check the latest version on crates.io
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"  # Check the latest version on crates.io
serde_json = "1.0"